Updated CSS for overlay - fixed jumping issue

--- a/css/jquery.hintbox.css
+++ b/css/jquery.hintbox.css
@@ -3,7 +3,8 @@ input.hint, span.hint {
 }
 
 .placeholder-hide {
-	font-size: 0!important;
+	position: absolute;
+	display: none;
 	z-index: -1;	
 }
 
@@ -15,20 +16,10 @@ input.hint, span.hint {
 	bottom: 1px;
 	left: 2px;
 	z-index: 1;
-	height: 20px;
 	padding: 4px;
-	font-size: 13px;
-	line-height: 20px;
 	color: #999;
 	white-space: nowrap;
-	cursor: text;*/
-	-webkit-transition: opacity .1s,font-size .1s;
-	-moz-transition: opacity .1s,font-size .1s;
-	-o-transition: opacity .1s,font-size .1s;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-o-user-select: none;
-	user-select: none;
+	cursor: text;
 }
 
 .hintbox-container {
@@ -39,11 +30,4 @@ input.hint, span.hint {
 .hintbox-container input {
 	position: absolute;
 	top: 0;
-}
-
-.hintbox-container input:focus+.placeholder {
-	-moz-opacity: .6;
-	opacity: .6;
-	-ms-filter: "alpha(opacity=60)";
-	filter: alpha(opacity=60);
 }
